--- a/websocket-server/package.json
+++ b/websocket-server/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -21,4 +21,5 @@
   "devDependencies": {
     "nodemon": "^3.1.9"
   }
-}
+    }
+
